PRETTIER AND SQL-FORMATTER INIT
